@@ -2,6 +2,7 @@ Revision history for Pandoc-Elements
 
 {{$NEXT}}
     - added Pandoc::Walker
+    - new helper method: element
 
 0.01  2014-10-23 21:34:25 CEST
     - initial release
